--- a/Easy/Easy.csproj
+++ b/Easy/Easy.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Platform\Setting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Toast.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
