--- a/Easy/Easy.csproj
+++ b/Easy/Easy.csproj
@@ -102,6 +102,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\File.cs" />
     <Compile Include="Platform\Setting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Toast.cs" />
