--- a/Easy/Easy.csproj
+++ b/Easy/Easy.csproj
@@ -105,6 +105,7 @@
     <Compile Include="IO\File.cs" />
     <Compile Include="Platform\Setting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text\WordCount.cs" />
     <Compile Include="UI\Toast.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
