--- a/Easy/Easy.csproj
+++ b/Easy/Easy.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO\File.cs" />
+    <Compile Include="IO\ISaveProvider.cs" />
     <Compile Include="Platform\Setting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\Highlight\BaseHighlighter.cs" />
